# nao_demo2015

./: README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: isit.msg
feetcontact/footbumper/: package.xml
feetcontact/footcontact/: CMakeLists.txt
feetcontact/footcontact/src/: footcontact_node.cpp
footbumper/: CMakeLists.txt
footbumper/src/: footbumper_node.cpp
footcontact/: package.xml
footcontact/src/: footcontact_node.cpp
headtouch/: CMakeLists.txt  package.xml
headtouch/src/: headtouch.cpp  movefromhead.cpp
nao_standup/: CMakeLists.txt  package.xml  stand_up.cpp
nao_standup/src/: .stand_up.cpp.swo  .stand_up.cpp.swp  set_pose.cpp  stand_up.cpp  test_move.cpp
nao_talker/: CMakeLists.txt  package.xml
nao_talker/src/: nao_talker.cpp
nao_walk/: CMakeLists.txt
nao_walk/src/: set_initial_pose.cpp  set_pose.cpp  walk.cpp
naopositions/nao_set_pose/: CMakeLists.txt  package.xml
naopositions/nao_set_pose/src/: .print_states.cpp.swp  .set_pose.cpp.swp  print_states.cpp  set_pose.cpp  startup.cpp
naopositions/nao_squats/: CMakeLists.txt  package.xml
naopositions/nao_squats/src/: .squat_copy.cpp.swp  .stand.cpp.swp  fall_backwards.cpp  fall_forward.cpp  mid_squat.cpp  set_pose.cpp  squat.cpp  squat_copy.cpp  stand.cpp
naopositions/nao_standup/src/: get_up.cpp  stand_up.cpp
naopositions/nao_standup_facedown/: CMakeLists.txt  package.xml
naopositions/nao_standup_facedown/src/: .stand_up.cpp.swp  fall_down.cpp  stand_up.cpp  stand_up_fd.cpp
naopositions/nao_standup_faceup/: CMakeLists.txt  package.xml
naopositions/nao_standup_faceup/src/: .set_pose.cpp.swp  stand_up.cpp  stand_up_fu.cpp
naopositions/nao_walk/: CMakeLists.txt  package.xml
naopositions/nao_walk/src/: set_pose.cpp  walk.cpp
naopositions/standupfrombelly/: CMakeLists.txt
naopositions/startup/: CMakeLists.txt  package.xml
naopositions/startup/src/: startup.cpp
procrob_functional/: train.txt
procrob_functional/data/: 2_your_friend's_name1.pgm  2_your_friend's_name10.pgm  2_your_friend's_name11.pgm  2_your_friend's_name12.pgm  2_your_friend's_name13.pgm  2_your_friend's_name14.pgm  2_your_friend's_name15.pgm  2_your_friend's_name16.pgm  2_your_friend's_name2.pgm  2_your_friend's_name3.pgm  2_your_friend's_name4.pgm  2_your_friend's_name5.pgm  2_your_friend's_name6.pgm  2_your_friend's_name7.pgm  2_your_friend's_name8.pgm  2_your_friend's_name9.pgm  3_Found1.pgm  3_Found2.pgm  3_Found3.pgm  3_Found4.pgm  3_Found5.pgm  3_Found6.pgm  3_Found7.pgm  3_Found8.pgm
procrob_functional/src/: face_recognition.cpp
programs/: CMakeLists.txt  package.xml
programs/feetcontact/footbumper/: CMakeLists.txt
programs/feetcontact/footbumper/src/: footbumper_node.cpp
programs/feetcontact/footcontact/src/: footcontact_node.cpp
programs/functions/: CMakeLists.txt  package.xml
programs/functions/src/: .horror.cpp.swp  .hula.cpp.swp  binary_tree.h  demo.cpp  horror.cpp  hula.cpp  lights_music.cpp  mathp.cpp  quiz.cpp  record.cpp  rollercoaster.cpp  sing.cpp  walk_detect.cpp
programs/headtouch/: CMakeLists.txt  package.xml
programs/headtouch/src/: .headtouch.cpp.swp  headtouch.cpp  movefromhead.cpp
programs/moves/: CMakeLists.txt
programs/moves/src/: demo.cpp  walk_detect.cpp  wavenao.cpp
programs/src/: walk_detect.cpp  wavenao.cpp
programs/vision/: CMakeLists.txt  package.xml
programs/vision/src/: facedetect.cpp  facedetect.h  facemain.cpp  test.cpp
sound/: CMakeLists.txt  package.xml
sound/launch/: musicwait.launch
sound/src/: headbang.cpp  lolpalooza.cpp  music.cpp  sound.cpp  time.cpp
standupfrombelly/src/: .standupfrombelly_node.cpp.swp  standupfrombelly_node.cpp
startup/src/: startup.cpp
statepublish/: CMakeLists.txt  package.xml
statepublish/launch/: states.launch
statepublish/msg/: states.msg
statepublish/src/: statepublish_node.cpp
wavenao/: package.xml
wavenao/src/: wavenao.cpp
