<?xml version="1.0"?>
<package>
  <name>custom_msgs</name>
  <version>0.1.0</version>
  <description>The custom_msgs package</description>

  <maintainer email="infantinoalex@gmail.com">Alexander Infantino</maintainer>
  <license>UML</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
