<?xml version="1.0"?>
<package>
  <name>nao_talker</name>
  <version>0.1.0</version>
  <description>The nao_talker package</description>

  <maintainer email="infantinoalex@gmail.com">Alexander Infantino</maintainer>


  <license>UML</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  

  <export>
  </export>
</package>
